Fixed gaps

--- a/style.css
+++ b/style.css
@@ -113,11 +113,8 @@ a:hover{
 }
 
 section {
-    min-height: 90vh;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-margin-top: 80px;
-    transform: translateY(30px);
+    padding: 60px 15px;
+   scroll-margin-top: 80px;
 }
 
 .profile_section {
